[gd_scene load_steps=22 format=3 uid="uid://dxk87kjhu7oou"]

[ext_resource type="Script" path="res://Scripts/Enemies/Attacks/horizontal_proj.gd" id="1_j4ghr"]
[ext_resource type="Texture2D" uid="uid://1qtftwf2rgl1" path="res://Sprites/Abilities & Skills/Water_ball.png" id="2_82c2f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tvdrl"]
atlas = ExtResource("2_82c2f")
region = Rect2(576, 128, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tkde"]
atlas = ExtResource("2_82c2f")
region = Rect2(768, 128, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5416q"]
atlas = ExtResource("2_82c2f")
region = Rect2(960, 128, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_smje7"]
atlas = ExtResource("2_82c2f")
region = Rect2(1152, 128, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6x88f"]
atlas = ExtResource("2_82c2f")
region = Rect2(1344, 128, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttqeu"]
atlas = ExtResource("2_82c2f")
region = Rect2(1536, 128, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0tab"]
atlas = ExtResource("2_82c2f")
region = Rect2(1728, 128, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mygg"]
atlas = ExtResource("2_82c2f")
region = Rect2(960, 0, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3csk"]
atlas = ExtResource("2_82c2f")
region = Rect2(576, 384, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_aul67"]
atlas = ExtResource("2_82c2f")
region = Rect2(768, 384, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xd4vd"]
atlas = ExtResource("2_82c2f")
region = Rect2(960, 384, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpb4e"]
atlas = ExtResource("2_82c2f")
region = Rect2(1152, 384, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_awc5m"]
atlas = ExtResource("2_82c2f")
region = Rect2(1344, 384, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_naayc"]
atlas = ExtResource("2_82c2f")
region = Rect2(1536, 384, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_spxju"]
atlas = ExtResource("2_82c2f")
region = Rect2(1728, 384, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_043dj"]
atlas = ExtResource("2_82c2f")
region = Rect2(0, 512, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_quw3i"]
atlas = ExtResource("2_82c2f")
region = Rect2(192, 512, 192, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_vc4qk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvdrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tkde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5416q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smje7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6x88f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttqeu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0tab")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mygg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3csk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aul67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xd4vd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpb4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awc5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_naayc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_spxju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_043dj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_quw3i")
}],
"loop": false,
"name": &"expired",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ol7oh"]
radius = 7.0

[node name="Projectile" type="Node2D"]
script = ExtResource("1_j4ghr")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(16, 3)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_vc4qk")
animation = &"expired"

[node name="Area" type="Area2D" parent="."]
collision_layer = 16
metadata/damage = 40

[node name="Collision" type="CollisionShape2D" parent="Area"]
shape = SubResource("CircleShape2D_ol7oh")
disabled = true
debug_color = Color(0.683339, 0, 0.197394, 0.42)

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Area" to="." method="_on_area_area_entered"]
[connection signal="area_exited" from="Area" to="." method="_on_area_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
